# test

./: README.md  pyproject.toml
design-doc/: MCP contract implementation.md  RAG implementation design.md  agent promts design.md  data model design.md  knowledge graph schema design.md  playwrite hybride framework design.md  service design.md
doc/arc-design/: architectural-design.md  high-level-system-diagram.md
doc/impl-design/: MCP contract implementation.md  RAG implementation design.md  agent prompts design.md  data model design.md  knowledge graph schema design.md  playwrite hybride framework design.md  service design.md
doc/impl-plan/: detailed-implementation-plan.md
doc/workitem/: BACKLOG.md  EPIC-001-spec-and-backbone.md  EPIC-002-mcp-understanding-and-state.md  EPIC-003-rag-agent-runtime-and-assets.md  EPIC-004-execution-triage-healing-and-hardening.md  README.md  SPRINT-BOARD.md  STORY-001-contract-and-enum-lock.md  STORY-002-request-trigger-orchestration.md  (+27 more)
mcp/: registry.yaml
prompts/: registry.yaml
tests/: test_ado_attachments.py  test_ado_context.py  test_ado_live_query.py  test_ado_publish.py  test_api.py  test_change_impact.py  test_cloud_adapters.py  test_defect_regression_generation.py  test_defect_vector_triage.py  test_image_processing.py  test_journey_wireframes.py  test_persistence.py  test_playwright_assets.py  test_playwright_runner.py  test_regression_execution.py  test_selector_learning.py  test_selector_profiles.py  test_service_bus.py  test_stability_analytics.py  test_vector_association.py  test_webhooks.py  test_wireframes.py
(+121 files in other folders)
